# partizan

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
agents/: README.md  label_schema.py  network.py  research_network.json
docs/: agency_metrics.md  architecture.md  cgt_hpc_research_plan.md  composition_hard_target_wave_17_holdout_component_count_3_baseline_report.json  composition_hard_target_wave_17_holdout_component_count_3_symmetry_report.json  composition_hard_target_wave_17_holdout_composition_digest_symmetry_report.json  composition_hard_target_wave_17_holdout_result_value_digest_symmetry_report.json  composition_hard_target_wave_17_manifest.md  composition_hard_target_wave_17_symmetry_split_report.json  dataset_label_schema.md  dataset_v0_manifest.md  decomposer_pseudocode.md  development.md  discovery_wave_68_elkies_scope_report.md  discovery_wave_69_preregistration.md  discovery_wave_69_stage_a_calibration_audit.md  discovery_wave_69_stage_a_calibration_audit.v0.1.json  discovery_wave_69_stage_a_suite_freeze.md  discovery_wave_69_target_selection_report.md  discovery_wave_69r_construction_catalog.v0.2.json  discovery_wave_69r_constructive_grammar_spec.md  discovery_wave_69r_implementation_audit.md  discovery_wave_69r_implementation_freeze.md  discovery_wave_69r_preregistration.md  expanded_family_frontier_wave_12_holdout_knk_symmetry_baseline_report.json  expanded_family_frontier_wave_12_holdout_knk_symmetry_geometry_probe_report.json  expanded_family_frontier_wave_12_holdout_knk_symmetry_report.json  experiment_matrix.md  (+86 more)
engine/: Cargo.toml  README.md  ml_model.py  orchestrator.py  test.py
engine/gate_s_checker/: Cargo.toml
engine/gate_s_checker/src/: main.rs
engine/src/: decomposer.rs  lib.rs
(+161 files in other folders)
