[build-system]
requires = ["maturin>=1.8,<2"]
build-backend = "maturin"

[project]
name = "partizan-cgt"
version = "0.1.0"
description = "Constrained chess/CGT research bindings and provenance event tools"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Devin Nicholson" }]
keywords = ["chess", "combinatorial game theory", "research"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/devinnicholson/partizan"
Repository = "https://github.com/devinnicholson/partizan"
Issues = "https://github.com/devinnicholson/partizan/issues"

[project.scripts]
partizan-events = "partizan.cli:main"
partizan-discovery = "partizan.discovery_cli:main"

[tool.maturin]
manifest-path = "engine/Cargo.toml"
python-source = "python"
module-name = "partizan._native"
bindings = "pyo3"
